--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+rbundler 0.3.2
+--------------
+
+* Bug fix for the case when a required package is already installed and the requirement is '>='.
+
+rbundler 0.3.1
+--------------
+
+* Adds support for installing versioned packages
+
 rbundler 0.3.0
 --------------
 
@@ -29,7 +39,7 @@ rbundler 0.2
 
 Removes `libs` option.
 
-Uses a combination of `.Renviron` and `PROJECT_ROOT/.Rbundle` library location. 
+Uses a combination of `.Renviron` and `PROJECT_ROOT/.Rbundle` library location.
 
 rbundler 0.1.1
 --------------
